[gd_scene load_steps=16 format=3 uid="uid://bthplnovyhrpa"]

[ext_resource type="Script" path="res://scripts/Playground.gd" id="1_ohys2"]
[ext_resource type="Script" path="res://scripts/HUD.gd" id="3_ftqo5"]
[ext_resource type="Texture2D" uid="uid://bvytc0f0scp8j" path="res://assets/jorge-resources/Game Selection/Fire-Water symbol.png" id="7_taa2g"]
[ext_resource type="Script" path="res://scripts/PauseButton.gd" id="8_1ieds"]
[ext_resource type="Texture2D" uid="uid://bqb0rtmryfpj5" path="res://assets/jorge-resources/Game Selection/Air-Earth symbol rot.png" id="8_1tmow"]
[ext_resource type="Texture2D" uid="uid://dd2qb0nlltbrq" path="res://assets/jorge-resources/Game Selection/Air-Earth symbol.png" id="8_bk8re"]
[ext_resource type="AudioStream" uid="uid://b6e4n6u30fyl8" path="res://assets/sounds/juegonicopune.mp3" id="9_hxvts"]
[ext_resource type="Texture2D" uid="uid://dkdrc52ib1fsv" path="res://assets/jorge-resources/Game Selection/Fire-Water symbol rot.png" id="10_6dk6d"]
[ext_resource type="Script" path="res://scenes/ExitButton.gd" id="10_q7u0a"]
[ext_resource type="PackedScene" uid="uid://dvukui07lve6g" path="res://scenes/lesson.tscn" id="10_tlq7d"]
[ext_resource type="Script" path="res://scripts/Events.gd" id="11_yngvc"]
[ext_resource type="PackedScene" uid="uid://bmmk676dlolf3" path="res://scenes/shroom.tscn" id="12_erhbx"]
[ext_resource type="Script" path="res://scripts/limit.gd" id="12_ihapt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_60wp1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c1ycn"]
size = Vector2(2503.59, 9.46942)

[node name="Arena" type="Node2D"]
script = ExtResource("1_ohys2")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1937.0
offset_top = -122.0
offset_right = 3240.0
offset_bottom = 1832.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.56835

[node name="ColorRect3" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1201.0
offset_bottom = 1201.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.59795, 0.892334)
color = Color(0, 0, 0, 1)

[node name="Shroom" parent="." instance=ExtResource("12_erhbx")]
position = Vector2(937, 553)
scale = Vector2(2, 2)

[node name="Lesson" parent="." instance=ExtResource("10_tlq7d")]
visible = false
z_index = 10
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 511.0
offset_top = 204.0
offset_right = 511.0
offset_bottom = 204.0
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("3_ftqo5")

[node name="PanelContainer" type="PanelContainer" parent="HUD"]
offset_right = 1920.0
offset_bottom = 134.0

[node name="ColorRect" type="ColorRect" parent="HUD/PanelContainer"]
layout_mode = 2
color = Color(0.27451, 0.27451, 0.27451, 1)

[node name="MarginContainer" type="MarginContainer" parent="HUD/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(1920, 0)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HUD/PanelContainer/MarginContainer/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/PanelContainer/MarginContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Player1Cooldown" type="TextureProgressBar" parent="HUD/PanelContainer/MarginContainer/HBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
max_value = 6.0
step = 0.01
value = 6.0
fill_mode = 2
nine_patch_stretch = true
texture_under = ExtResource("7_taa2g")
texture_progress = ExtResource("7_taa2g")
tint_under = Color(1, 0.25098, 0.101961, 1)
tint_progress = Color(0.301961, 0.0745098, 0.0313726, 1)

[node name="Player1ScoreLabel" type="Label" parent="HUD/PanelContainer/MarginContainer/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0.466667, 0.490196, 0.760784, 1)
theme_override_font_sizes/font_size = 66
text = "0"
horizontal_alignment = 2

[node name="PanelContainer2" type="PanelContainer" parent="HUD/PanelContainer/MarginContainer/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/PanelContainer/MarginContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Player2Cooldown" type="TextureProgressBar" parent="HUD/PanelContainer/MarginContainer/HBoxContainer/PanelContainer2/HBoxContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
max_value = 6.0
step = 0.1
fill_mode = 2
nine_patch_stretch = true
texture_under = ExtResource("8_1tmow")
texture_progress = ExtResource("8_1tmow")
tint_under = Color(0.901961, 0.74902, 0, 1)
tint_progress = Color(0.301961, 0.25098, 0, 1)

[node name="Player2ScoreLabel" type="Label" parent="HUD/PanelContainer/MarginContainer/HBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(0.466667, 0.490196, 0.760784, 1)
theme_override_font_sizes/font_size = 66
text = "0"

[node name="PanelContainer3" type="PanelContainer" parent="HUD/PanelContainer/MarginContainer/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/PanelContainer/MarginContainer/HBoxContainer/PanelContainer3"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Player3Cooldown" type="TextureProgressBar" parent="HUD/PanelContainer/MarginContainer/HBoxContainer/PanelContainer3/HBoxContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
max_value = 6.0
step = 0.01
value = 6.0
fill_mode = 2
nine_patch_stretch = true
texture_under = ExtResource("8_bk8re")
texture_progress = ExtResource("8_bk8re")
tint_under = Color(0.101961, 0.698039, 1, 1)
tint_progress = Color(0.03, 0.21, 0.3, 1)

[node name="Player3ScoreLabel" type="Label" parent="HUD/PanelContainer/MarginContainer/HBoxContainer/PanelContainer3/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.466667, 0.490196, 0.760784, 1)
theme_override_font_sizes/font_size = 66
text = "0"

[node name="PanelContainer4" type="PanelContainer" parent="HUD/PanelContainer/MarginContainer/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/PanelContainer/MarginContainer/HBoxContainer/PanelContainer4"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Player4Cooldown" type="TextureProgressBar" parent="HUD/PanelContainer/MarginContainer/HBoxContainer/PanelContainer4/HBoxContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
max_value = 6.0
step = 0.01
value = 6.0
fill_mode = 2
nine_patch_stretch = true
texture_under = ExtResource("10_6dk6d")
texture_progress = ExtResource("10_6dk6d")
tint_under = Color(0, 0.901961, 0.6, 1)
tint_progress = Color(0, 0.3, 0.2, 1)

[node name="Player4ScoreLabel" type="Label" parent="HUD/PanelContainer/MarginContainer/HBoxContainer/PanelContainer4/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.466667, 0.490196, 0.760784, 1)
theme_override_font_sizes/font_size = 66
text = "0"

[node name="ControlDetails1" type="Label" parent="HUD"]
visible = false
light_mask = 16
visibility_layer = 16
z_index = 1
offset_left = 253.0
offset_top = 11.0
offset_right = 392.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Left/Right:  A  /   D
Dash: W"

[node name="ControlDetails2" type="Label" parent="HUD"]
visible = false
z_index = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -433.0
offset_top = -77.0
offset_right = -259.0
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Left/Right:  L/R Arrows
Hulk: Up Arrow"

[node name="ControlDetails3" type="Label" parent="HUD"]
visible = false
z_index = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 232.0
offset_top = -76.0
offset_right = 406.0
offset_bottom = -24.0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Left/Right: J / L
Dash: I"

[node name="ControlDetails4" type="Label" parent="HUD"]
visible = false
z_index = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -402.0
offset_top = 13.0
offset_right = -172.0
offset_bottom = 65.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Left/Right:  KP 4 / KP 6 Arrows
Hulk: KP 8"

[node name="Centerfold" type="PanelContainer" parent="HUD"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.0
offset_right = 128.0
offset_bottom = 94.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_60wp1")

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Centerfold"]
visible = false
layout_mode = 2

[node name="Title" type="Label" parent="HUD/Centerfold/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.341176, 0.270588, 1, 1)
theme_override_font_sizes/font_size = 66
text = "Pune+ a"

[node name="ScoreToReach" type="Label" parent="HUD/Centerfold/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.341176, 0.270588, 1, 1)
theme_override_colors/font_shadow_color = Color(0.992157, 0.52549, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/font_size = 66
text = "10"

[node name="PauseButton" type="Button" parent="."]
visible = false
visibility_layer = 3
z_index = 5
offset_left = 670.0
offset_top = 379.0
offset_right = 678.0
offset_bottom = 387.0
theme_override_font_sizes/font_size = 66
text = "Unpause
 (Click)"
script = ExtResource("8_1ieds")

[node name="ExitButton" type="Button" parent="."]
visible = false
visibility_layer = 3
z_index = 5
offset_left = 670.0
offset_top = 379.0
offset_right = 678.0
offset_bottom = 387.0
theme_override_font_sizes/font_size = 66
text = "Click to Exit
ESC to Cancel"
script = ExtResource("10_q7u0a")

[node name="Colliders" type="Node2D" parent="."]

[node name="LimitTop" type="Area2D" parent="Colliders"]
script = ExtResource("12_ihapt")

[node name="Collider" type="CollisionShape2D" parent="Colliders/LimitTop"]
position = Vector2(989, 126)
scale = Vector2(0.790066, 1.23849)
shape = SubResource("RectangleShape2D_c1ycn")

[node name="ColorRect" type="ColorRect" parent="Colliders/LimitTop"]
visible = false
light_mask = 4
visibility_layer = 4
z_index = 2
z_as_relative = false
custom_minimum_size = Vector2(10, 80)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="LimitLeft" type="Area2D" parent="Colliders"]
position = Vector2(0, 2)
script = ExtResource("12_ihapt")

[node name="Collider" type="CollisionShape2D" parent="Colliders/LimitLeft"]
position = Vector2(-6, 565)
rotation = 1.5708
scale = Vector2(0.790066, 1.23849)
shape = SubResource("RectangleShape2D_c1ycn")

[node name="ColorRect" type="ColorRect" parent="Colliders/LimitLeft"]
light_mask = 4
visibility_layer = 4
custom_minimum_size = Vector2(1, 0)
offset_right = 1.0
offset_bottom = 1121.0
color = Color(1, 1, 0.254902, 1)

[node name="LimitRight" type="Area2D" parent="Colliders"]
position = Vector2(1919, 9)
script = ExtResource("12_ihapt")

[node name="Collider" type="CollisionShape2D" parent="Colliders/LimitRight"]
position = Vector2(7, 455)
rotation = -1.56936
scale = Vector2(0.790066, 1.23849)
shape = SubResource("RectangleShape2D_c1ycn")

[node name="ColorRect" type="ColorRect" parent="Colliders/LimitRight"]
light_mask = 4
visibility_layer = 4
offset_right = 40.0
offset_bottom = 1131.0
color = Color(1, 1, 0.254902, 1)

[node name="Control" type="Control" parent="Colliders"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="LimitBottom" type="Area2D" parent="Colliders/Control"]
modulate = Color(0.478431, 1, 1, 1)
position = Vector2(4, 1081)
script = ExtResource("12_ihapt")

[node name="Collider" type="CollisionShape2D" parent="Colliders/Control/LimitBottom"]
position = Vector2(977, 0)
scale = Vector2(0.790066, 1.23849)
shape = SubResource("RectangleShape2D_c1ycn")

[node name="ColorRect" type="ColorRect" parent="Colliders/Control/LimitBottom"]
modulate = Color(0.431373, 1, 0.431373, 1)
light_mask = 4
visibility_layer = 4
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -9.0
offset_right = 1910.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.203922, 0.207843, 0.203922, 0.980392)
metadata/_edit_use_anchors_ = true

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_hxvts")
bus = &"Music"

[node name="Events" type="Node2D" parent="."]
script = ExtResource("11_yngvc")
shroomScene = ExtResource("12_erhbx")

[node name="ShroomTimer" type="Timer" parent="Events"]
wait_time = 3.0

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="ExitButton" to="ExitButton" method="_on_pressed"]
[connection signal="timeout" from="Events/ShroomTimer" to="Events" method="_on_shroom_timer_timeout"]

[editable path="Lesson"]
